force-app/main/default/objects/Service_Enrollment__c/fields/Service_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Service_Picklist__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABLE</fullName>
            </value>
            <value>
                <fullName>Care Management</fullName>
            </value>
            <value>
                <fullName>Conservatorship</fullName>
            </value>
            <value>
                <fullName>Co-Trustee</fullName>
            </value>
            <value>
                <fullName>Delegated Trust</fullName>
            </value>
            <value>
                <fullName>Directed Trust</fullName>
            </value>
            <value>
                <fullName>EX-Personal Representative</fullName>
            </value>
            <value>
                <fullName>Income Trust</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Pooled 1st Party Trust</fullName>
            </value>
            <value>
                <fullName>Pooled 3rd Party Trust</fullName>
            </value>
            <value>
                <fullName>Private Trust Advisory</fullName>
            </value>
            <value>
                <fullName>Rep Payee</fullName>
            </value>
            <value>
                <fullName>Sole Trustee 1st Party Trust</fullName>
            </value>
            <value>
                <fullName>Sole Trustee 3rd Party Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>