force-app/main/default/objects/Service_Enrollment__c/fields/Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_Reason__c</fullName>
    <label>Service Reason</label>
    <type>TextArea</type>
</CustomField>