force-app/main/default/objects/Service_Enrollment__c/fields/Sign_Language_Interpreter_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sign_Language_Interpreter_Needed__c</fullName>
    <label>Sign Language Interpreter Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>