force-app/main/default/objects/Service_Enrollment__c/fields/Start_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Closing_Date__c</fullName>
    <label>Start Closing Date</label>
    <type>Date</type>
</CustomField>