force-app/main/default/objects/Service_Enrollment__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <inlineHelpText>Adds up all the Time Entry records associated with the Service Enrollment</inlineHelpText>
    <label>Total Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>