force-app/main/default/objects/Service_Enrollment__c/fields/True_Link_Balance__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Balance__c</fullName>
    <formula>Trust__r.True_Link_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Link Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>