force-app/main/default/objects/Service_Enrollment__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Service Enrollments</relationshipLabel>
    <relationshipName>Service_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>