force-app/main/default/objects/Service_Enrollment__c/fields/Trust_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Trust_Coordinator__c</fullName>
    <formula>Trust__r.Trust_Coordinator_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Coordinator</label>
    <type>Text</type>
</CustomField>