force-app/main/default/objects/Service_Enrollment__c/fields/Trust_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Type__c</fullName>
    <formula>TEXT(Trust__r.Trust_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Type</label>
    <type>Text</type>
</CustomField>