force-app/main/default/objects/Service_Enrollment__c/fields/Types_of_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Support_Needed__c</fullName>
    <label>Types of Support Needed</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>