force-app/main/default/objects/Service_Enrollment__c/fields/Where_Is_Beneficiary_Employed__c.field-meta.xml
<CustomField>
    <fullName>Where_Is_Beneficiary_Employed__c</fullName>
    <label>Where Is Beneficiary Employed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>