force-app/main/default/objects/Service_Enrollment__c/validationRules/Denied_Needs_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Denied_Needs_Reason</fullName>
    <active>true</active>
    <description>Denied Needs Reason</description>
    <errorConditionFormula>AND(ISCHANGED(Status__c), OR(TEXT(Status__c) = &quot;Denied&quot;, 
TEXT(Status__c) = &quot;Inactive&quot;),
ISBLANK(Reason_for_Closing_Denial__c))</errorConditionFormula>
    <errorMessage>Please enter a Reason for Closing/Denial</errorMessage>
</ValidationRule>