force-app/main/default/objects/Service_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Time__c</columns>
    <columns>Reason_for_Closing_Denial__c</columns>
    <columns>Care_Manager_Account__c</columns>
    <columns>Care_Manager_Contact__c</columns>
    <columns>Notes__c</columns>
    <columns>Service_Picklist__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>