force-app/main/default/objects/Service_Enrollment__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Case_Manager__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Intake__c</columns>
    <columns>Trust__c</columns>
    <columns>Date_Started__c</columns>
    <columns>Date_Closed__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved</label>
</ListView>