force-app/main/default/objects/Service_Enrollment__c/listViews/My_Service_Enrollments.listView-meta.xml
<ListView>
    <fullName>My_Service_Enrollments</fullName>
    <columns>NAME</columns>
    <columns>Case_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Time__c</columns>
    <columns>Reason_for_Closing_Denial__c</columns>
    <columns>Care_Manager_Account__c</columns>
    <columns>Care_Manager_Contact__c</columns>
    <columns>Notes__c</columns>
    <columns>Service_Picklist__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>My Approved Service Enrollments</label>
</ListView>