force-app/main/default/objects/Service_Enrollment__c/listViews/No_Assigned_Service.listView-meta.xml
<ListView>
    <fullName>No_Assigned_Service</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Case_Manager__c</columns>
    <columns>Client__c</columns>
    <columns>Intake__c</columns>
    <columns>Trust__c</columns>
    <columns>Service_Picklist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Picklist__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Assigned Service</label>
</ListView>