force-app/main/default/objects/Service_Enrollment__c/listViews/Pooled_3rd_Party_Trust_Active_Accounts.listView-meta.xml
<ListView>
    <fullName>Pooled_3rd_Party_Trust_Active_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Case_Manager__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Trust__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Number__c</field>
        <operation>contains</operation>
        <value>TL</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Enrolled,Closing</value>
    </filters>
    <label>Pooled 3rd Party Trust Active Accounts</label>
</ListView>